2009-02-16 Sarka Todorova <sarka.todorova@cern.ch>
	* fix return values (gcc43 warnings) 
	* tagged as MuonTrackingGeometry-00-04-22

2009-02-11 Sarka Todorova <sarka.todorova@cern.ch>
	* update hardcoded partitions 
	* tagged as MuonTrackingGeometry-00-04-21

2009-02-10 Sarka Todorova <sarka.todorova@cern.ch>
	* fix segm.fault (cloning of frame volumes) 
	* tagged as MuonTrackingGeometry-00-04-20

2009-02-09 Sarka Todorova <sarka.todorova@cern.ch>
	* update (BT,ECT,feet adjustment) 
	* tagged as MuonTrackingGeometry-00-04-19

2009-02-08 Sarka Todorova <sarka.todorova@cern.ch>
	* update 
	* tagged as MuonTrackingGeometry-00-04-18

2009-02-04 Sarka Todorova <sarka.todorova@cern.ch>
	* update steering
	* tagged as MuonTrackingGeometry-00-04-17

2009-02-03 Andreas Salzburger < Andreas.Salzburger -at- cern.ch >
        * switch to new TrkDetFlags
	* tagged as MuonTrackingGeometry-00-04-16
       

2009-02-02 Sarka Todorova <sarka.todorova@cern.ch>
	* adjustable blending
	* tagged as MuonTrackingGeometry-00-04-15

2009-01-15 Sarka Todorova <sarka.todorova@cern.ch>
	* performance update (via fine partitioning )
	* tagged as MuonTrackingGeometry-00-04-14

2008-12-18 Andreas Salzburger < Andrfeas.Salzburger -at- cern.ch >
        * changes for double/float testbuilding
        * tagged as MuonTrackingGeometry-00-04-13

2008-12-16 Andreas Salzburger < Andrfeas.Salzburger -at- cern.ch >
        * adapt dependencies, remove dependency on TrkDetDescrTools
        * tagged as MuonTrackingGeometry-00-04-12 

2008-12-01 Sarka Todorova <sarka.todorova@cern.ch>
	* suppress spacer layers with negative thickness
	* tagged as MuonTrackingGeometry-00-04-11

2008-12-01 Sarka Todorova <sarka.todorova@cern.ch>
	* default setup ( merge of ATG & MTG ) 
	* tagged as MuonTrackingGeometry-00-04-10

2008-11-28 Sarka Todorova <sarka.todorova@cern.ch>
	* prevent crash in finalization ( of multiple build of geometry ) 
	* tagged as MuonTrackingGeometry-00-04-09
